[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agent-message-sanitize"
version = "0.1.0"
description = "Sanitize LLM message lists before sending: strip null bytes, truncate oversized content, remove None-content messages, coerce non-string content to string. Returns a sanitized copy with a log of what changed. Never mutates input."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "llm",
  "ai",
  "agents",
  "sanitize",
  "messages",
  "preprocessing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-message-sanitize"
Issues = "https://github.com/MukundaKatta/agent-message-sanitize/issues"
Source = "https://github.com/MukundaKatta/agent-message-sanitize"

[tool.hatch.build.targets.wheel]
packages = ["agent_message_sanitize"]

[tool.hatch.build.targets.sdist]
include = ["/agent_message_sanitize", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
