[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-message-sanitize"
version = "0.1.0"
description = "Sanitize LLM message lists — remove None/empty content, normalize roles, filter blocks, collapse adjacent same-role. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["llm", "agents", "messages", "sanitize", "anthropic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-message-sanitize"

[tool.setuptools.packages.find]
where = ["src"]
